--- a/TA11/style.css
+++ b/TA11/style.css
@@ -1,6 +1,6 @@
 .impar{
     background-color: lightpink;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, 'DejaVu Sans', sans-serif;
 }
 
 #dos{
